GNU SASL LIBRARY NEWS -- History of user-visible changes.
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
See the end for copying conditions.

* Version 0.2.26 (unreleased)

** API and ABI modifications.
No changes since last version.

* Version 0.2.25 (released 2008-03-10)

** Fix non-portable use of brace expansion in makefiles.

** Documentation improvements.

** API and ABI modifications.
No changes since last version.

* Version 0.2.24 (released 2008-01-15)

** When libgcrypt is used, disable secure memory to make things work.

** When built under MinGW, generate a libgsasl-XX.def using -Wl,--output-def.

** API and ABI modifications.
No changes since last version.

* Version 0.2.23 (released 2008-01-15)

** CRAM-MD5: Check return value from gc_nonce().  (SECURITY)
If GNU SASL was not built against libgcrypt, and the
--enable-nonce-device device file did not exist, building libgsasl
would warn you but would continue.  Further, the code in CRAM-MD5 to
generate a challenge would not generate a new nonce each time, so
depending on what's stored on the stack, you may get the same
challenge each time.  The function should have checked the return
value from gc_nonce().  Reported by "Daniel Armyr" <daniel@armyr.se>.

** Use gettext 0.17.

** Update gnulib files.

** API and ABI modifications.
No changes since last version.

* Version 0.2.22 (released 2007-10-08)

** Update gnulib files.

** API and ABI modifications.
No changes since last version.

* Version 0.2.21 (released 2007-08-22)

** DIGEST-MD5: Remove the extra leading, trailing, and intermediate commas.
Patch from James Canete <jcanete01@shaw.ca>.

** API and ABI modifications.
No changes since last version.

* Version 0.2.20 (released 2007-08-11)

** Correctly increment the shared library version.
I forgot to increment it in the last release, to indicate that a new
API/ABI was added.

** If GSS-API and GS2 are disabled, don't bother linking to a GSS-API library.