@@ -1,5 +1,5 @@
 /* server.c --- DIGEST-MD5 mechanism from RFC 2831, server side.
- * Copyright (C) 2002, 2003, 2004, 2006, 2007  Simon Josefsson
+ * Copyright (C) 2002, 2003, 2004, 2006, 2007, 2008  Simon Josefsson
  *
  * This file is part of GNU SASL Library.
  *
@@ -92,6 +92,80 @@ _gsasl_digest_md5_server_start (Gsasl_session * sctx, void **mech_data)
 
   return GSASL_OK;
 }
+/* C89 compliant way to cast 'char' to 'unsigned char'. */
+static inline unsigned char
+to_uchar (char ch)
+{
+  return ch;
+}
+
+char *
+latin1toutf8 (const char *str)
+{
+  char *p = malloc (2 * strlen (str) + 1);
+  if (p)
+    {
+      size_t i, j = 0;
+      for (i = 0; str[i]; i++)
+	{
+	  if (to_uchar (str[i]) < 0x80)
+	    p[j++] = str[i];
+	  else if (to_uchar (str[i]) < 0xC0)
+	    {
+	      p[j++] = 0xC2;
+	      p[j++] = str[i];
+	    }
+	  else
+	    {
+	      p[j++] = 0xC3;
+	      p[j++] = str[i] - 64;
+	    }
+	}
+      p[j] = 0x00;
+    }
+
+  return p;
+}
+
+char *
+utf8tolatin1ifpossible (const char *passwd)
+{
+  char *p;
+  size_t i;
+
+  for (i = 0; passwd[i]; i++)
+    {
+      if (to_uchar (passwd[i]) > 0x7F)
+	{
+	  if (to_uchar (passwd[i]) < 0xC0 || to_uchar (passwd[i]) > 0xC3)
+	    return strdup (passwd);
+	  i++;
+	  if (to_uchar (passwd[i]) < 0x80 || to_uchar (passwd[i]) > 0xBF)
+	    return strdup (passwd);
+	}
+    }
+
+  p = malloc (strlen (passwd) + 1);
+  if (p)
+    {
+      size_t j = 0;
+      for (i = 0; passwd[i]; i++)
+	{
+	  if (to_uchar (passwd[i]) > 0x7F)
+	    {
+	      /* p[i+1] can't be zero here */
+	      p[j++] =
+		((to_uchar (passwd[i]) & 0x3) << 6)
+		| (to_uchar (passwd[i+1]) & 0x3F);
+	      i++;
+	    }
+	  else
+	    p[j++] = passwd[i];
+	}
+      p[j] = 0x00;
+    }
+  return p;
+}
 
 int
 _gsasl_digest_md5_server_step (Gsasl_session * sctx,
@@ -149,25 +223,41 @@ _gsasl_digest_md5_server_step (Gsasl_session * sctx,
 	return GSASL_MECHANISM_PARSE_ERROR;
 
       /* Store properties, from the client response. */
-      gsasl_property_set (sctx, GSASL_AUTHID, state->response.username);
+      if (state->response.utf8)
+	gsasl_property_set (sctx, GSASL_AUTHID, state->response.username);
+      else
+	{
+	  /* Client provided username in ISO-8859-1 form, convert it
+	     to UTF-8 since the library is all-UTF-8. */
+	  char *username = latin1toutf8 (username);
+	  if (!username)
+	    return GSASL_MALLOC_ERROR;
+	  gsasl_property_set (sctx, GSASL_AUTHID, username);
+	  free (username);
+	}
       gsasl_property_set (sctx, GSASL_AUTHZID, state->response.authzid);
       gsasl_property_set (sctx, GSASL_REALM, state->response.realm);
 
-      /* FIXME: qop, cipher, maxbuf.  Charset convert username. */
+      /* FIXME: qop, cipher, maxbuf.  */
 
       /* Compute secret.  TODO: Add callback to retrieve hashed
          secret. */
       {
-	const char *c;
+	const char *passwd;
 	char *tmp, *tmp2;
+	int rc;
 
-	c = gsasl_property_get (sctx, GSASL_PASSWORD);
-	if (!c)
+	passwd = gsasl_property_get (sctx, GSASL_PASSWORD);
+	if (!passwd)
 	  return GSASL_NO_PASSWORD;
 
-	if (asprintf (&tmp, "%s:%s:%s", state->response.username,
-		      state->response.realm ?
-		      state->response.realm : "", c) < 0)
+	tmp2 = utf8tolatin1ifpossible (passwd);
+
+	rc = asprintf (&tmp, "%s:%s:%s", state->response.username,
+		       state->response.realm ?
+		       state->response.realm : "", tmp2);
+	free (tmp2);
+	if (rc < 0)
 	  return GSASL_MALLOC_ERROR;
 
 	rc = gsasl_md5 (tmp, strlen (tmp), &tmp2);
